# drake

solvers/dominic/: BUILD.bazel  dense_components.cc  dense_components.h  fbstab_algorithm-inl.h  fbstab_algorithm.cc  fbstab_algorithm.h  fbstab_algorithm_impl.h  fbstab_dense.cc  fbstab_dense.h  fbstab_mpc.cc  fbstab_mpc.h
solvers/dominic/components/: dense_components.cc  dense_components.h  mpc_components.cc  mpc_components.h  mpc_data.cc  mpc_data.h  mpc_feasibility.h  mpc_residual.cc  mpc_residual.h  mpc_variable.cc  mpc_variable.h  mpc_variables.cc  mpc_variables.h  ricatti_linear_solver.cc  ricatti_linear_solver.h
solvers/dominic/linalg/: StaticMatrixTest.cc  matrix_sequence.cc  matrix_sequence.h  static_matrix.cc  static_matrix.h
solvers/dominic/lukes_examples/: README.html
solvers/dominic/test/: dense_component_build_test.cc  dense_component_tests.cc  dense_fbstab_build_test.cc  dense_fbstab_tests.cc  fbstab_dense_tests.cc  fbstab_dense_tests.m  fbstab_mpc_build_test.cc  fbstab_mpc_tests.cc  matrix_sequence_build_test.cc  mpc_component_build_test.cc  mpc_component_tests.cc  static_matrix_build_test.cc  static_matrix_test.cc  static_matrix_test.m
solvers/fbstab/: BUILD.bazel  README.md  fbstab_algorithm-inl.h  fbstab_algorithm.h  fbstab_dense.cc  fbstab_dense.h  fbstab_mpc.cc  fbstab_mpc.h  fbstab_mpc.html
solvers/fbstab/algorithm/: fbstab_algorithm-inl.h  fbstab_algorithm.h
solvers/fbstab/components/: BUILD.bazel  dense_components.cc  dense_components.h  dense_data.cc  dense_data.h  dense_feasibility.cc  dense_feasibility.h  dense_linear_solver.cc  dense_linear_solver.h  dense_residual.cc  dense_residual.h  dense_variable.cc  dense_variable.h  mpc_data.cc  mpc_data.h  mpc_feasibility.cc  mpc_feasibility.h  mpc_residual.cc  mpc_residual.h  mpc_variable.cc  mpc_variable.h  ricatti_linear_solver.cc  ricatti_linear_solver.h  riccati_linear_solver.cc
solvers/fbstab/components/test/: dense_component_unit_tests.h  mpc_component_unit_tests.cc  mpc_component_unit_tests.h
solvers/fbstab/dense_components/: dense_data.cc  dense_data.h  dense_feasibility.cc  dense_feasibility.h  dense_linear_solver.cc  dense_linear_solver.h  dense_residual.cc  dense_residual.h  dense_variable.cc  dense_variable.h
solvers/fbstab/linalg/: matrix_sequence.cc  matrix_sequence.h  static_matrix.cc
solvers/fbstab/mpc_components/: mpc_data.cc  mpc_data.h  mpc_feasibility.cc  mpc_feasibility.h  mpc_residual.cc  mpc_residual.h  mpc_variable.cc  mpc_variable.h  ricatti_linear_solver.cc  ricatti_linear_solver.h
solvers/fbstab/test/: closed_loop_benchmarks.cc  dense_component_build_test.cc  dense_component_tests.cc  dense_component_unit_tests.cc  dense_component_unit_tests.h  dense_fbstab_build_test.cc  dense_fbstab_tests.cc  dense_residual_tests.m  fbstab_dense_unit_tests.cc  fbstab_mpc_build_test.cc  fbstab_mpc_tests.cc  fbstab_mpc_unit_tests.cc  horizon_length_timing.h  matrix_sequence_build_test.cc  matrix_sequence_tests.cc  mpc_component_build_test.cc  mpc_component_tests.cc  mpc_component_unit_tests.cc  mpc_component_unit_tests.h  ocp_generator.cc  ocp_generator.h  scaling_benchmark.h  scaling_benchmarks_main.cc  solver_wrapper_unit_tests.cc  solver_wrappers.h  static_matrix_build_test.cc  static_matrix_test.cc  static_matrix_test.m  test_helpers.h  timing_simulator.h
tools/cc_toolchain/: bazel.rc
tools/workspace/eigen/: package.BUILD.bazel
