

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_test",
)

package(default_visibility = ["//visibility:public"])

# Libraries *************************************
# C++ StaticMatrix library
drake_cc_library(
	name = "static_matrix",
	srcs = ["linalg/static_matrix.h",
			"linalg/static_matrix.cc",
	],
	hdrs = ["linalg/static_matrix.h"],
)

drake_cc_library(
    name = "dense_components",
    srcs = ["dense_components.h",
            "dense_components.cc"
    ],
    hdrs = ["dense_components.h"],
    deps = [":static_matrix"],
)

# Build tests *************************************
drake_cc_binary(
	name = "static_matrix_build_test",
	srcs = ["static_matrix_build_test.cc"],
	deps = [":static_matrix"],
)

drake_cc_binary(
    name = "dense_component_build_test",
    srcs = ["test/dense_component_build_test.cc"],
    deps = [":static_matrix",
            ":dense_components"],
)

# Unit tests *************************************
drake_cc_googletest(
	name = "static_matrix_test",
	srcs = ["test/static_matrix_test.cc"],
	deps = [":static_matrix"],
)

drake_cc_googletest(
    name = "fbstab_dense_tests",
    srcs = ["test/fbstab_dense_tests.cc"],
    deps = [":static_matrix",
            "dense_components"
    ],
)