

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_test",
)

package(default_visibility = ["//visibility:public"])

# Libraries *************************************
# C++ StaticMatrix library
drake_cc_library(
	name = "static_matrix",
	srcs = ["linalg/static_matrix.h",
			"linalg/static_matrix.cc",
            "linalg/matrix_sequence.h",
            "linalg/matrix_sequence.cc"
	],
	hdrs = ["linalg/static_matrix.h",
            "linalg/matrix_sequence.h"],
)

drake_cc_library(
    name = "dense_components",
    srcs = ["components/dense_components.h",
            "components/dense_components.cc"
    ],
    hdrs = ["components/dense_components.h"],
    deps = [":static_matrix"],
)

drake_cc_library(
    name = "mpc_components",
    srcs = ["components/mpc_data.h",
            "components/mpc_variable.h"
    ],
    hdrs = ["components/mpc_data.h",
            "components/mpc_variable.h"
    ],
    deps = [":static_matrix"],
)

drake_cc_library(
    name = "fbstab_dense",
    srcs = ["fbstab_dense.h",
            "fbstab_algorithm.h",
            "fbstab_dense.cc",
            "fbstab_algorithm.cc"
    ],
    hdrs = ["fbstab_dense.h",
            "fbstab_algorithm.h"],
    deps = [":static_matrix",
            ":dense_components"],
)

# Build tests *************************************
drake_cc_binary(
	name = "static_matrix_build_test",
	srcs = ["test/static_matrix_build_test.cc"],
	deps = [":static_matrix"],
)

drake_cc_binary(
    name = "dense_component_build_test",
    srcs = ["test/dense_component_build_test.cc"],
    deps = [":static_matrix",
            ":dense_components"],
)

drake_cc_binary(
    name = "dense_fbstab_build_test",
    srcs = ["test/dense_fbstab_build_test.cc"],
    deps = [":static_matrix",
            ":dense_components",
            ":fbstab_dense"],
)

drake_cc_binary(
    name = "matrix_sequence_build_test",
    srcs = ["test/matrix_sequence_build_test.cc",
            "linalg/matrix_sequence.cc",
            "linalg/matrix_sequence.h"],
    deps = [":static_matrix"],
)

drake_cc_binary(
    name = "mpc_component_build_test",
    srcs = ["test/mpc_component_build_test.cc",
            "test/test_helpers.h"],
    deps = [":static_matrix",
            ":mpc_components"]
)

# Unit tests *************************************
drake_cc_googletest( # static matrices
	name = "static_matrix_test",
	srcs = ["test/static_matrix_test.cc"],
	deps = [":static_matrix"],
)

drake_cc_googletest( # matrix sequences
    name = "matrix_sequence_tests",
    srcs = ["test/matrix_sequence_tests.cc"],
    deps = [":static_matrix"],
)

drake_cc_googletest( # dense component objects
    name = "dense_component_tests",
    srcs = ["test/dense_component_tests.cc"],
    deps = [":static_matrix",
            ":dense_components"
    ],
)

drake_cc_googletest( # mpc component objects
    name = "mpc_component_tests",
    srcs = ["test/mpc_component_tests.cc",
            "test/test_helpers.h"],
    deps = [":static_matrix",
            ":mpc_components"
    ],
)

drake_cc_googletest( # fbstab_dense
    name = "dense_fbstab_tests",
    srcs = ["test/dense_fbstab_tests.cc"],
    deps = [":static_matrix",
            ":dense_components",
            ":fbstab_dense"
    ],
)


