load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:public"])


drake_cc_library( 
    name = "fbstab_dense",
    srcs = ["fbstab_dense.cc",
            "fbstab_algorithm.h",
            "fbstab_algorithm-inl.h"
    ],
    hdrs = ["fbstab_dense.h"],
    deps = ["//solvers/fbstab/components:dense_data",
            "//solvers/fbstab/components:dense_variable",
            "//solvers/fbstab/components:dense_residual",
            "//solvers/fbstab/components:dense_feasibility",
            "//solvers/fbstab/components:dense_linear_solver"],
)

drake_cc_googletest( # unit tests
    name = "dense_unit_tests",
    srcs = ["test/fbstab_dense_unit_tests.cc"],
    deps = [":fbstab_dense"],
    copts = ["-g"]
)



drake_cc_googletest( # fbstab_mpc
    name = "mpc_tests",
    srcs = ["test/fbstab_mpc_tests.cc",
            "test/test_helpers.h"],
    deps = [":static_matrix",
            ":fbstab_mpc"
    ],
)

drake_cc_library(
    name = "fbstab_mpc",
    srcs = ["fbstab_mpc.h",
            "fbstab_mpc.cc",
            "fbstab_algorithm.h",
            "fbstab_algorithm-inl.h"
    ],
    hdrs = ["fbstab_mpc.h"],
    deps = [":static_matrix",
            ":mpc_components"],
)





