load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:private"])

# libraries

drake_cc_library(
    name = "fbstab_dense",
    srcs = [
        "fbstab_algorithm.h",
        "fbstab_dense.cc",
    ],
    hdrs = ["fbstab_dense.h"],
    deps = [
        "//common:essential",
        "//solvers/fbstab/components:dense_data",
        "//solvers/fbstab/components:dense_feasibility",
        "//solvers/fbstab/components:dense_linear_solver",
        "//solvers/fbstab/components:dense_residual",
        "//solvers/fbstab/components:dense_variable",
        "@eigen",
    ],
)

drake_cc_library(
    name = "fbstab_mpc",
    srcs = [
        "fbstab_algorithm.h",
        "fbstab_mpc.cc",
    ],
    hdrs = ["fbstab_mpc.h"],
    deps = [
        "//common:essential",
        "//solvers/fbstab/components:mpc_data",
        "//solvers/fbstab/components:mpc_feasibility",
        "//solvers/fbstab/components:mpc_residual",
        "//solvers/fbstab/components:mpc_variable",
        "//solvers/fbstab/components:riccati_linear_solver",
        "@eigen",
    ],
)

drake_cc_library(
    name = "scaling_class",
    hdrs = ["test/scaling_benchmark.h"],
    deps = [
        ":ocp_generator",
        ":solver_wrappers",
        "//common:essential",
        "//solvers:mathematical_program_lite",
        "@eigen",
    ],
)

drake_cc_library(
    name = "solver_wrappers",
    srcs = ["test/solver_wrappers.h"],
    hdrs = ["test/solver_wrappers.h"],
    deps = [
        ":ocp_generator",
        "//common:essential",
        "//solvers:mathematical_program_lite",
        "//solvers:mosek_solver",
        "//solvers:osqp_solver",
        "//solvers:gurobi_solver",
        "@eigen",
    ],
)

drake_cc_library(
    name = "ocp_generator",
    srcs = [
        "test/ocp_generator.cc",
    ],
    hdrs = ["test/ocp_generator.h"],
    deps = [
        ":fbstab_mpc",
        "//common:essential",
        "@eigen",
    ],
)

# binaries
drake_cc_binary(
    name = "scaling_benchmark",
    srcs = ["test/scaling_benchmarks_main.cc"],
    deps = [
        ":ocp_generator",
        ":scaling_class",
        "//solvers:mathematical_program_lite",
        "@eigen",
    ],
)

# tests
drake_cc_googletest(
    name = "wrapper_unit_tests",
    srcs = ["test/solver_wrapper_unit_tests.cc"],
    deps = [
        "fbstab_mpc",
        ":ocp_generator",
        ":solver_wrappers",
    ],
)

drake_cc_googletest(
    name = "dense_unit_tests",
    srcs = ["test/fbstab_dense_unit_tests.cc"],
    deps = [
        ":fbstab_dense",
        "@eigen",
    ],
)

drake_cc_googletest(
    name = "mpc_unit_tests",
    srcs = ["test/fbstab_mpc_unit_tests.cc"],
    deps = [
        ":fbstab_mpc",
        ":ocp_generator",
        "@eigen",
    ],
)
