load(
    "@drake//tools/skylark:drake_cc.bzl", 
    "drake_cc_googletest",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "dense_data",
    srcs = ["dense_data.cc"],
    hdrs = ["dense_data.h"],
    deps = [
        "//common:essential",
        "@eigen",
    ],
)

drake_cc_library(
    name = "dense_variable",
    srcs = ["dense_variable.cc"],
    hdrs = ["dense_variable.h"],
    deps = [
        ":dense_data",
        "//common:essential",
        "@eigen",
    ],
)

drake_cc_library( # residual
    name = "dense_residual",
    srcs = ["dense_residual.h",
            "dense_residual.cc"
    ],
    hdrs = ["dense_data.h"],
    deps = [":dense_variable",
            ":dense_data",
            "@eigen"],
)

drake_cc_library( # feasibility 
    name = "dense_feasibility",
    srcs = ["dense_feasibility.h",
            "dense_feasibility.cc"
    ],
    hdrs = ["dense_feasibility.h"],
    deps = [":dense_variable",
            ":dense_data",
            "@eigen"],
)

drake_cc_library( # linear solver
    name = "dense_linear_solver",
    srcs = ["dense_linear_solver.h",
            "dense_linear_solver.cc"
    ],
    hdrs = ["dense_linear_solver.h"],
    deps = [":dense_variable",
            ":dense_residual",
            ":dense_data",
            "@eigen"],
)

drake_cc_googletest( # dense component unit tests
    name = "dense_component_unit_tests",
    srcs = ["test/dense_component_unit_tests.cc",
            "test/dense_component_unit_tests.h"],
    deps = [":dense_data",
            ":dense_variable",
            ":dense_residual",
            ":dense_feasibility",
            ":dense_linear_solver",
            "//common:essential"],
)

# FBstab MPC *************************************
drake_cc_library( # data
    name = "mpc_data",
    srcs = ["mpc_data.cc"],
    hdrs = ["mpc_data.h"],
    deps = ["@eigen",
            "//common:essential"],
)

drake_cc_library( # variable
    name = "mpc_variable",
    srcs = ["mpc_variable.cc"],
    hdrs = ["mpc_variable.h"],
    deps = ["@eigen",
            ":mpc_data",
            "//common:essential"],
)

drake_cc_library( # residual
    name = "mpc_residual",
    srcs = ["mpc_residual.cc"],
    hdrs = ["mpc_residual.h"],
    deps = ["@eigen",
            ":mpc_data",
            ":mpc_variable",
            "//common:essential"],
)


drake_cc_googletest(
    name = "mpc_component_unit_tests",
    srcs = ["test/mpc_component_unit_tests.cc",
            "test/mpc_component_unit_tests.h"],
    deps = ["@eigen",
            ":mpc_data",
            ":mpc_variable",
            ":mpc_residual"
    ],
)





